# ssl-vision

./: .clang-format  .editorconfig  .gitattributes  .gitignore  .gitpod.yml  .travis.yml  CMakeLists.txt  Dockerfile  Doxyfile  InstallPackagesArch.sh  InstallPackagesUbuntu.sh  Makefile  Makefile.cmake  README  README.md  backupConfig.sh  cmake_build  prettymake  robocup-ssl-cam-0-lut-yuv.xml  robocup-ssl-cam-0-mask.xml  robocup-ssl-cam-1-lut-yuv.xml  robocup-ssl-cam-1-mask.xml  robocup-ssl-teams.xml  robocup-ssl.xml  screen.camera  settings.xml  sslvision.kdevelop  sslvision.kdevelop.filelist  sslvision.pro  start.sh  test-connect-multicast.py  video-stream-to-file.py  video_stream_file_capture.py
.circleci/: config.yml
branches/4cam_experimental/: robocup-ssl-teams.xml
branches/experimental/: CMakeLists.txt  README  sslvision.kdevelop.filelist
branches/experimental/templates/: cpp
cmake/: FindPYLON.cmake  FindPYLON5.cmake  FindSPINNAKER.cmake  Findflycapture.cmake  FindmvIMPACT.cmake
configs/: robocup-ssl-cam-0-mask.xml  robocup-ssl-cam-1-lut-yuv.xml  robocup-ssl-cam-1-mask.xml  robocup-ssl-teams.xml
debian/: control  rules  sslvision.desktop
patterns/teams/: convert.sh  cores.md
src/: app.pro  app.sources.pro.inc  config.pro.inc
src/app/: app.pro  app.sources.pro.inc  capture_thread.cpp  capture_thread.h  framedata.cpp  framedata.h  main.cpp  videostats.h
src/app/gui/: automatedcolorcalibwidget.cpp  automatedcolorcalibwidget.h  camera_intrinsic_calib_widget.cpp  camera_intrinsic_calib_widget.h  cameracalibwidget.cpp  cameracalibwidget.h  colorpicker.cpp  glLUTwidget.cpp  glLUTwidget.h  glwidget.cpp  glwidget.h  jog_dial.cpp  jog_dial.h  lutwidget.cpp  lutwidget.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  maskwidget.cpp  maskwidget.h  neurowidget.cpp  neurowidget.h  neurowidget.ui  renderoptions.cpp  renderoptions.h  videowidget.cpp  videowidget.h  videowidget.ui
src/app/plugins/: plugin_apriltag.cpp  plugin_apriltag.h  plugin_auto_color_calibration.cpp  plugin_auto_color_calibration.h  plugin_camera_intrinsic_calib.cpp  plugin_camera_intrinsic_calib.h  plugin_cameracalib.cpp  plugin_cameracalib.h  plugin_colorcalib.cpp  plugin_colorcalib.h  plugin_colorthreshold.cpp  plugin_colorthreshold.h  plugin_detect_balls.cpp  plugin_detect_balls.h  plugin_detect_robots.cpp  plugin_detect_robots.h  plugin_distribute.cpp  plugin_distribute.h  plugin_dvr.cpp  plugin_dvr.h  plugin_find_blobs.cpp  plugin_find_blobs.h  plugin_greyscale.cpp  plugin_greyscale.h  plugin_legacypublishgeometry.cpp  plugin_legacypublishgeometry.h  plugin_legacysslnetworkoutput.cpp  plugin_mask.cpp  plugin_mask.h  plugin_neuralcolorcalib.cpp  plugin_neuralcolorcalib.h  plugin_publishgeometry.cpp  plugin_publishgeometry.h  plugin_runlength_encode.cpp  plugin_runlength_encode.h  plugin_sslnetworkoutput.cpp  plugin_visualize.cpp  plugin_visualize.h  visionplugin.cpp  visionplugin.h
src/app/stacks/: DistributorStack.cpp  DistributorStack.h  multistack_robocup_ssl.cpp  multistack_robocup_ssl.h  multistacks.h  multivisionstack.cpp  multivisionstack.h  stack_robocup_ssl.cpp  stack_robocup_ssl.h  stacks.cpp  visionstack.cpp  visionstack.h
src/basler-test/: Barebones.cpp  Grab.cpp  Grab_bkp.cpp  Params.cpp
src/client/: client.pro  client.sources.pro.inc  main.cpp
src/graphicalClient/: CentralWindow.cpp  ClientThreading.cpp  ClientThreading.h  GraphicsPrimitives.cpp  GraphicsPrimitives.h  Makefile  Test.pro  Testmain.cpp  client.pro  client.sources.pro.inc  gltext.cpp  gltext.h  graphicalClient.pro  main.cpp  soccerview.cpp  soccerview.h
src/logClient/: CentralWindow.cpp  CentralWindow.h  ClientThreading.cpp  ClientThreading.h  GraphicsPrimitives.cpp  GraphicsPrimitives.h  LogControl.h  main.cpp
src/shared/: CMakeLists.txt.inc  sources.pro.inc
src/shared/apriltag/: tagCustom20h7.c  tagCustom20h7.h
src/shared/capture/: capture_basler.cpp  capture_basler.h  capture_bluefox2.cpp  capture_bluefox2.h  capture_bluefox3.cpp  capture_bluefox3.h  capture_flycap.cpp  capture_flycap.h  capture_generator.cpp  capture_generator.h  capture_spinnaker.cpp  capture_spinnaker.h  capture_splitter.cpp  capture_splitter.h  capture_vapix.cpp  capture_vapix.h  capture_video.cpp  capture_video.h  capturedc1394v2.cpp  capturedc1394v2.h  capturefromfile.cpp  capturefromfile.h  captureinterface.cpp  captureinterface.h  capturev4l.cpp  capturev4l.h  sources.pro.inc
src/shared/cmake/: CMakeLists.txt.inc
src/shared/cmpattern/: cmpattern_pattern.cpp  cmpattern_pattern.h  cmpattern_team.cpp  cmpattern_team.h  cmpattern_teamdetector.cpp  cmpattern_teamdetector.h  sources.pro.inc
src/shared/cmvision/: cmvision_histogram.cpp  cmvision_region.cpp  cmvision_region.h  cmvision_threshold.cpp  cmvision_threshold.h
src/shared/gl/: glcamera.cpp  glcamera.h  globject.h  sources.pro.inc
src/shared/net/: netraw.cpp  netraw.h  robocup_ssl_client.cpp  robocup_ssl_client.h  robocup_ssl_server.cpp  robocup_ssl_server.h  sources.pro.inc
src/shared/proto/: messages_robocup_ssl_detection.proto  messages_robocup_ssl_detection_tracked.proto  messages_robocup_ssl_geometry.proto  messages_robocup_ssl_geometry_legacy.proto  messages_robocup_ssl_wrapper.proto  messages_robocup_ssl_wrapper_legacy.proto  messages_robocup_ssl_wrapper_tracked.proto  sources.pro.inc
src/shared/util/: TimeSync.cpp  TimeSync.h  affinity_manager.cpp  affinity_manager.h  bbox.h  camera_calibration.cpp  camera_calibration.h  camera_parameters.cpp  camera_parameters.h  (+46 more)
tags/robocup2014-ssl-vision-4-cam/: CMakeLists.txt
trunk/: CMakeLists.txt  Makefile  README  robocup-ssl-teams.xml  sslvision.kdevelop  sslvision.kdevelop.filelist  sslvision.pro
trunk/scripts/: cpuflags.rb
trunk/src/: Makefile.app  app.pro  app.sources.pro.inc  config.pro.inc
trunk/templates/: h
wiki/: 4CameraSetup.wiki  ApplicationOverview.wiki  BallDetection.wiki  CameraCalibration.wiki  CapturingImages.wiki  ColorSegmentationConfiguration.wiki  Communication.wiki  GeometryCalibrationImplementation.wiki  Manual.wiki  RequirementsInstallation.wiki  TODO.wiki  TeamConfiguration.wiki
(+340 files in other folders)
